# browser_selector

./: Cargo.toml  README.md
.github/workflows/: build.yaml
src/: browser.rs  configuration.rs  lib.rs  register.rs
