[package]
name = "browser_selector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.7", features = ["derive"] }
log = "0.4.20"
serde = "1.0.192"
serde_derive = "1.0.192"
simple-logging = "2.0.2"
toml = "0.8.8"
url = "2.4.1"
winreg = "0.51.0"
